--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
+colored = "3.0.0"
+glob = "0.3.2"
 regex = "1.11.1"
