--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2024"
 clap = { version = "4.5.40", features = ["derive"] }
 colored = "3.0.0"
 glob = "0.3.2"
-rayon = "1.10.0"
 regex = "1.11.1"
+tokio = { version = "1.45.1", features = ["full"] }
