--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 clap = { version = "4.5.40", features = ["derive"] }
 colored = "3.0.0"
 glob = "0.3.2"
+itertools = "0.14.0"
+rayon = "1.10.0"
 regex = "1.11.1"
-tokio = { version = "1.45.1", features = ["full"] }
+thiserror = "2.0.12"
